2007-05-04 [colin]	2.9.1cvs43

	* src/compose.c
	* src/privacy.c
	* src/privacy.h
	* src/plugins/pgpcore/prefs_gpg.c
	* src/plugins/pgpcore/prefs_gpg.h
	* src/plugins/pgpinline/pgpinline.c
	* src/plugins/pgpmime/pgpmime.c
		Add an API to warn about encryption limits,
		and allow to disable these warnings

2007-05-03 [colin]	2.9.1cvs42

	* src/summaryview.c
	* src/mainwindow.c
		Fix bug 1213, 'Delete more than 
		one thread at once'

2007-05-03 [wwp]	2.9.1cvs41

	* src/prefs_common.c
	* src/prefs_filtering.c
	* src/prefs_template.c
	* src/common/template.c
	* src/common/template.h
	* src/gtk/gtkutils.c
	* src/gtk/gtkutils.h
		Templates are no longer automatically sorted
		by name, but can be sorted manually using
		|< < > >| buttons as well as drag'n'drop.

2007-05-03 [wwp]	2.9.1cvs40

	* src/plugins/spamassassin/spamassassin.c
	* src/plugins/spamassassin/spamassassin.h
	* src/plugins/spamassassin/spamassassin_gtk.c
	* src/plugins/bogofilter/bogofilter.c
	* src/plugins/bogofilter/bogofilter.h
	* src/plugins/bogofilter/bogofilter_gtk.c
		Added an option to conditionally mark saved spam
		as read	(default is and was to do so).
		Satisfies feature request 1708539 on sf.net tracker.

2007-05-03 [colin]	2.9.1cvs39

	* src/inc.c
		Fix bug 1211, 'Offline dialog message bugs/annoyances...'

2007-05-02 [colin]	2.9.1cvs38

	* src/textview.c
		Fix bug 1209, 'Clicking on address 
		in header (mailto uri) selects 
		default account'. Patch adapted from
		G.P. Halkes' patch.

2007-05-02 [colin]	2.9.1cvs37

	* src/grouplistdialog.c
		Set cursor to wait cursor while loading
		groups.

2007-05-02 [paul]	2.9.1cvs36

	* src/folder.c
	* src/common/defs.h
		rename cache and mark files
		(data is preserved)

2007-04-30 [paul]	2.9.1cvs35

	* manual/glossary.xml
	* manual/plugins.xml
		updates. Patch by Ricardo

2007-04-29 [wwp]	2.9.1cvs34

	* src/mainwindow.c
	* configure.ac
		Fix few grammatical errors (patch by David Relson < relson at
		osagesoftware dot com >).
