@@ -2571,3 +2571,4 @@
 ( cvs diff -u -r 1.204.2.132 -r 1.204.2.133 src/prefs_common.c;  cvs diff -u -r 1.59.2.55 -r 1.59.2.56 src/prefs_filtering.c;  cvs diff -u -r 1.12.2.40 -r 1.12.2.41 src/prefs_template.c;  cvs diff -u -r 1.2.4.18 -r 1.2.4.19 src/common/template.c;  cvs diff -u -r 1.1.4.4 -r 1.1.4.5 src/common/template.h;  cvs diff -u -r 1.5.2.57 -r 1.5.2.58 src/gtk/gtkutils.c;  cvs diff -u -r 1.4.2.34 -r 1.4.2.35 src/gtk/gtkutils.h;  ) > 2.9.1cvs41.patchset
 ( cvs diff -u -r 1.395.2.299 -r 1.395.2.300 src/summaryview.c;  cvs diff -u -r 1.274.2.188 -r 1.274.2.189 src/mainwindow.c;  ) > 2.9.1cvs42.patchset
 ( cvs diff -u -r 1.382.2.375 -r 1.382.2.376 src/compose.c;  cvs diff -u -r 1.10.2.13 -r 1.10.2.14 src/privacy.c;  cvs diff -u -r 1.10.2.11 -r 1.10.2.12 src/privacy.h;  cvs diff -u -r 1.1.2.22 -r 1.1.2.23 src/plugins/pgpcore/prefs_gpg.c;  cvs diff -u -r 1.1.2.9 -r 1.1.2.10 src/plugins/pgpcore/prefs_gpg.h;  cvs diff -u -r 1.1.2.33 -r 1.1.2.34 src/plugins/pgpinline/pgpinline.c;  cvs diff -u -r 1.1.2.47 -r 1.1.2.48 src/plugins/pgpmime/pgpmime.c;  ) > 2.9.1cvs43.patchset
+( cvs diff -u -r 1.94.2.132 -r 1.94.2.133 src/messageview.c;  cvs diff -u -r 1.79.2.54 -r 1.79.2.55 src/mh.c;  cvs diff -u -r 1.60.2.45 -r 1.60.2.46 src/prefs_actions.c;  cvs diff -u -r 1.10.2.29 -r 1.10.2.30 src/prefs_gtk.c;  cvs diff -u -r 1.395.2.300 -r 1.395.2.301 src/summaryview.c;  cvs diff -u -r 1.1.4.18 -r 1.1.4.19 src/common/xml.c;  ) > 2.9.1cvs44.patchset
