@@ -1178,7 +1178,7 @@ static void messageview_save_as(MessageView *messageview)
 					       conv_get_locale_charset_str(),
 					       CS_UTF_8);
 		if (!filename) {
-			g_warning("messageview_save_as(): faild to convert character set.");
+			g_warning("messageview_save_as(): failed to convert character set.");
 			filename = g_strdup(oldstr);
 		}
 		dest = filesel_select_file_save(_("Save as"), filename);
