@@ -1159,7 +1159,7 @@ static gchar *mh_filename_from_utf8(const gchar *path)
 	gchar *real_path = g_filename_from_utf8(path, -1, NULL, NULL, NULL);
 
 	if (!real_path) {
-		g_warning("mh_filename_from_utf8: faild to convert character set\n");
+		g_warning("mh_filename_from_utf8: failed to convert character set\n");
 		real_path = g_strdup(path);
 	}
 
@@ -1170,7 +1170,7 @@ static gchar *mh_filename_to_utf8(const gchar *path)
 {
 	gchar *utf8path = g_filename_to_utf8(path, -1, NULL, NULL, NULL);
 	if (!utf8path) {
-		g_warning("mh_filename_to_utf8: faild to convert character set\n");
+		g_warning("mh_filename_to_utf8: failed to convert character set\n");
 		utf8path = g_strdup(path);
 	}
 
