@@ -381,7 +381,7 @@ void prefs_actions_read_config(void)
 
 		tmp = conv_codeset_strdup(buf, src_codeset, dest_codeset);
 		if (!tmp) {
-			g_warning("Faild to convert character set of action configuration\n");
+			g_warning("Failed to convert character set of action configuration\n");
 			tmp = g_strdup(buf);
 		}
 
@@ -408,7 +408,7 @@ void prefs_actions_write_config(void)
 
 	rcpath = g_strconcat(get_rc_dir(), G_DIR_SEPARATOR_S, ACTIONS_RC, NULL);
 	if ((pfile= prefs_write_open(rcpath)) == NULL) {
-		g_warning("failed to write configuration to file\n");
+		g_warning("Failed to write configuration to file\n");
 		g_free(rcpath);
 		return;
 	}
@@ -421,7 +421,7 @@ void prefs_actions_write_config(void)
 
 		act = conv_codeset_strdup(tmp, src_codeset, dest_codeset);
 		if (!act) {
-			g_warning("Faild to convert character set of action configuration\n");
+			g_warning("Failed to convert character set of action configuration\n");
 			act = g_strdup(act);
 		}
 
